--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -12,11 +12,12 @@
 
     <body>
 
-     <div class='container' style='padding-top:90px;'>
-      <h5 class="center-align light">Aplikasi pelacak rute</h5>
-       <h4 class="center-align light">Klinik Gigi di Medan</h4>
-       <h5 class="center-align light">dengan menggunakan Algoritma Greedy</h5>
-       <div  style='padding-left:12px;padding-right:12px;padding-top:28px;'>
+     <div class='container' style='padding-top:22px;'>
+      <h6 class="center-align light">Aplikasi pelacak rute</h6>
+       <h5 class="center-align light">Klinik Gigi di Medan</h5>
+       <h6 class="center-align light">dengan menggunakan Algoritma Greedy</h6>
+       <div  style='text-align:center;padding-left:12px;padding-right:12px;padding-top:28px;'>
+         <img src='/img/icon-uin.png' class='center-align' style='width:150px;'>
          <h6 class="center-align light">Silahkan login</h6>
          <div class="input-field col s6" style='padding-top:20px;'>
           <input placeholder="Username" id="txtUsername" type="text" class="validate">
@@ -24,7 +25,7 @@
           <div class="input-field col s6" style='padding-top:20px;'>
           <input placeholder="Password" id="txtPassword" type="password" class="validate">
         </div>
-         <a class="waves-effect waves-light btn" id='btnLogin'><i class="material-icons left">forward</i> Login</a>
+         <a class="waves-effect waves-light btn" id='btnLogin'><i class="material-icons left disabled">forward</i> Login</a>
       <div class='center-align' style='padding-top:12px;'>
         <div style='margin-bottom:12px;' id='capStatus'>Status koneksi ke server</div>
         <h6>Develop by : Taing Sapitri</h6>
