--- a/platforms/browser/www/mainApp/beranda.html
+++ b/platforms/browser/www/mainApp/beranda.html
@@ -37,7 +37,7 @@
       <div class="background blue">
         
       </div>
-      <a href="#!user"><img class="circle" src="/img/icon-uin.png"></a>
+      <a href="#!user"><img class="circle" src="http://cdn.haxors.or.id/annisa/icon-uin.png"></a>
       <a href="#!name"><span class="white-text name">Cek Rute Klink</span></a>
       <a href="#!email"><span class="white-text email">Admin</span></a>
     </div></li>
