--- a/www/mainApp/beranda.html
+++ b/www/mainApp/beranda.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-            <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
+            <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
          <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css"  media="screen,projection"/>
