--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,8 @@
          <a class="waves-effect waves-light btn" id='btnLogin'><i class="material-icons left disabled">forward</i> Login</a>
       <div class='center-align' style='padding-top:12px;'>
         <div style='margin-bottom:12px;' id='capStatus'>Status koneksi ke server</div>
-        <h6>Develop by : Taing Sapitri</h6>
+        <h6>Develop by : Taing Sapitri Nurdianti</h6>
+        <h6><small>Ilmu Komputer - Uinsu</small></h6>
          </div>
        </div>
       </div>
