--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
        <h5 class="center-align light">Klinik Gigi di Medan</h5>
        <h6 class="center-align light">dengan menggunakan Algoritma Greedy</h6>
        <div  style='text-align:center;padding-left:12px;padding-right:12px;padding-top:28px;'>
-         <img src='http://cdn.haxors.or.id/annisa/icon-uin.png' class='center-align' style='width:150px;'>
+         <img src='http://api.haxors.or.id/taing/logo.jpg' class='center-align' style='width:150px;'>
          <h6 class="center-align light">Silahkan login</h6>
          <div class="input-field col s6" style='padding-top:20px;'>
           <input placeholder="Username" id="txtUsername" type="text" class="validate">
