--- a/www/mainApp/beranda.html
+++ b/www/mainApp/beranda.html
@@ -37,13 +37,14 @@
       <div class="background blue">
         
       </div>
-      <a href="#!user"><img class="circle" src="http://cdn.haxors.or.id/annisa/icon-uin.png"></a>
+      <a href="#!user"><img class="circle" src="http://api.haxors.or.id/taing/user.jpg"></a>
       <a href="#!name"><span class="white-text name">Cek Rute Klink</span></a>
       <a href="#!email"><span class="white-text email">Admin</span></a>
     </div></li>
     <li><a href="#!" id="homeSideNav" class="hoverable"><i class="material-icons">home</i>Beranda</a></li>
     <li><a href="#!" id="btnKlinik" class="hoverable"><i class="material-icons">people</i>Informasi Klinik</a></li>
-    <li><a href="#!" id="btnPengujian" class="hoverable"><i class="material-icons">directions_bike</i>Pengujian</a></li> 
+    <li><a href="pengujian_2.html" class="hoverable"><i class="material-icons">directions_bike</i>Pengujian</a></li> 
+    <li><a href="hasil.html" class="hoverable"><i class="material-icons">assessment</i>Hasil Pengujian</a></li>     
     <li><a href="../index.html" class="hoverable"><i class="material-icons">undo</i>Log Out</a></li>
     <li>
       
