--- a/platforms/browser/www/mainApp/pengujian_4.html
+++ b/platforms/browser/www/mainApp/pengujian_4.html
@@ -91,6 +91,7 @@
         });
 
         // Create the places service.
+        // Capek brooowwwhhh
         var service = new google.maps.places.PlacesService(map);
         
         // Perform a nearby search.
