--- a/www/mainApp/beranda.html
+++ b/www/mainApp/beranda.html
@@ -43,7 +43,7 @@
     </div></li>
     <li><a href="#!" id="homeSideNav" class="hoverable"><i class="material-icons">home</i>Beranda</a></li>
     <li><a href="#!" id="btnKlinik" class="hoverable"><i class="material-icons">people</i>Informasi Klinik</a></li>
-    <li><a href="maps_uji.html" class="hoverable"><i class="material-icons">directions_bike</i>Pengujian</a></li>
+    <li><a href="pengujian_2.html" class="hoverable"><i class="material-icons">directions_bike</i>Pengujian</a></li>
     <li><a href="../index.html" class="hoverable"><i class="material-icons">undo</i>Log Out</a></li>
     <li>
       
