--- a/www/mainApp/beranda.html
+++ b/www/mainApp/beranda.html
@@ -37,9 +37,9 @@
       <div class="background blue">
         
       </div>
-      <a href="#!user"><img class="circle" src="http://api.haxors.or.id/taing/user.jpg"></a>
-      <a href="#!name"><span class="white-text name">Cek Rute Klink</span></a>
-      <a href="#!email"><span class="white-text email">Admin</span></a>
+      <a href="#!"><img class="circle" src="http://api.haxors.or.id/taing/user.jpg"></a>
+      <a href="#!"><span class="white-text name">Cek Rute Klink</span></a>
+      <a href="#!"><span class="white-text email">Admin</span></a>
     </div></li>
     <li><a href="#!" id="homeSideNav" class="hoverable"><i class="material-icons">home</i>Beranda</a></li>
     <li><a href="#!" id="btnKlinik" class="hoverable"><i class="material-icons">people</i>Informasi Klinik</a></li>
@@ -52,7 +52,7 @@
             <div class="row">
               <div class="col l6 s12">
                 <h5 class="grey-text">Track Rute Apps</h5>
-                <small class="grey-text">Taing Sapitri - UINSU</small>
+                <small class="grey-text">Taing Sapitri Nurdianti - UINSU</small>
               </div>
             </div>
           </div>          
