--- a/platforms/browser/www/mainApp/pengujian_2.html
+++ b/platforms/browser/www/mainApp/pengujian_2.html
@@ -165,6 +165,7 @@
                 $('#capHasil').show();
                 $('#infoAkhir').html("");
                 $('#titikTengah').html("");
+                $('#jarak_waktu').html("");
                });
         });
 
