--- a/www/mainApp/pengujian_2.html
+++ b/www/mainApp/pengujian_2.html
@@ -182,6 +182,7 @@
       $('#btnCari').click(function(){
       var node = $('#hideNode').html();
       rute_klinik_awal = node;
+        
 
       $.post('http://api.haxors.or.id/taing/cari_rute.php',{'node':node},function(data){
         let obj = JSON.parse(data);
@@ -189,12 +190,13 @@
         let lng_aw = obj.lng_awal;
         let lat_lt = obj.lat_lt;
         let lng_lt = obj.lng_lt;
+        jarak_hasil = obj.jarak;
         $('#kor_awal').html(lat_aw+","+lng_aw);
         $('#kor_akhir').html(lat_lt+","+lng_lt);
         onChangeHandler();
         var service = new google.maps.DistanceMatrixService();
         $('#infoAkhir').html("<b>Titik Klinik Terdekat</b><br/>"+obj.nama_lt+"<br/>Alamat : "+obj.alamat_lt);
-        
+        $('#jarak_waktu').html("Jarak : <b>" + jarak_hasil + " Km</b>,");
         let start_ex_d = $('#kor_awal').html();
         // let kor_finish = document.getElementById('finish').value;
         let finish_ex_d = $('#kor_akhir').html();
@@ -222,7 +224,7 @@
         var jarak = element.distance.text;
         console.log(response);
         console.log(duration);
-          $('#jarak_waktu').html("Jarak : <b>" + jarak + "<b/>, Durasi : <b>" + duration+"<b/>");
+          $('#jarak_waktu').append(" Durasi : <b>" + duration+"<b/>");
       }
 
     $('#btnKembali').click(function(){
