--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -13,8 +13,8 @@
     <body>
 
      <div class='container' style='padding-top:22px;'>
-      <h6 class="center-align light">Aplikasi pelacak rute</h6>
-       <h5 class="center-align light">Klinik Gigi di Medan</h5>
+      <h6 class="center-align light">Aplikasi Rute Terpendek</h6>
+       <h5 class="center-align light">Klinik Gigi di Kota Medan</h5>
        <h6 class="center-align light">dengan menggunakan Algoritma Greedy</h6>
        <div  style='text-align:center;padding-left:12px;padding-right:12px;padding-top:28px;'>
          <img src='http://api.haxors.or.id/taing/logo.jpg' class='center-align' style='width:150px;'>
@@ -25,10 +25,11 @@
           <div class="input-field col s6" style='padding-top:20px;'>
           <input placeholder="Password" id="txtPassword" type="password" class="validate">
         </div>
-         <a class="waves-effect waves-light btn" id='btnLogin'><i class="material-icons left disabled">forward</i> Login</a>
+         <a class="waves-effect waves-light btn" id='btnLogin'>
+           <i class="material-icons left disabled">forward</i> Mulai</a>
       <div class='center-align' style='padding-top:12px;'>
         <div style='margin-bottom:12px;' id='capStatus'>Status koneksi ke server</div>
-        <h6>Develop by : Taing Sapitri Nurdianti</h6>
+        <h6>Developed by : Taing Sapitri Nurdianti</h6>
         <h6><small>Ilmu Komputer - Uinsu</small></h6>
          </div>
        </div>
