--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -18,15 +18,9 @@
        <h6 class="center-align light">dengan menggunakan Algoritma Greedy</h6>
        <div  style='text-align:center;padding-left:12px;padding-right:12px;padding-top:28px;'>
          <img src='http://api.haxors.or.id/taing/logo.jpg' class='center-align' style='width:150px;'>
-         <h6 class="center-align light">Silahkan login</h6>
-         <div class="input-field col s6" style='padding-top:20px;'>
-          <input placeholder="Username" id="txtUsername" type="text" class="validate">
-        </div>
-          <div class="input-field col s6" style='padding-top:20px;'>
-          <input placeholder="Password" id="txtPassword" type="password" class="validate">
-        </div>
-         <a class="waves-effect waves-light btn" id='btnLogin'>
-           <i class="material-icons left disabled">forward</i> Mulai</a>
+         <div style="text-align:center;margin-top:20px;"><a class="waves-effect waves-light btn" id='btnLogin'>
+          <i class="material-icons left disabled">forward</i> Mulai</a></div>
+         
       <div class='center-align' style='padding-top:12px;'>
         <div style='margin-bottom:12px;' id='capStatus'>Status koneksi ke server</div>
         <h6>Developed by : Taing Sapitri Nurdianti</h6>
